# edge-u-cation

./: .gitignore  README.md  gradle.properties  local.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/mistralrs/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/mistralrs/: MainActivity.kt
app/src/main/java/com/example/mistralrs/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/mistralrs/: ExampleUnitTest.kt
app/src/testffi/: Cargo.toml  Makefile  test.py
app/src/testffi/src/: image_processing.rs  inference.rs  lib.rs  utils.rs
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
